# Game_theory_and_operations_research-Course_work-8_semester

./: CMakeLists.txt  main.cpp  mat.cpp  mat.h  maxmin.h
tests/: test1  test2  test3
